idisonado section, div e article

--- a/ineddex.html
+++ b/ineddex.html
@@ -6,6 +6,11 @@
     <title>flashcard</title>
 </head>
 <body>
-    
+  <maim>
+    <cetion id="container">
+        <!--article class="cartao_conteudo">
+    </article>
+    </setion>
+  </maim>  
 </body>
 </html>
